api: greenhopper api now implements webclient